--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "familycard-app",
   "version": "1.0.0",
@@ -10,14 +9,13 @@
   },
   "dependencies": {
     "firebase": "^10.0.0",
-    "framer-motion": "^10.0.0",
-    "lucide-react": "^0.298.0",
+    "framer-motion": "^10.16.3",
+    "lucide-react": "^0.297.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "shadcn/ui": "^1.0.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.2.0"
   }
 }
